[gd_scene load_steps=4 format=3 uid="uid://bfu41rido3bca"]

[ext_resource type="Script" uid="uid://blbae1p8nj3sr" path="res://scenes/game_ui.gd" id="1_rns2u"]
[ext_resource type="PackedScene" uid="uid://c4x5tkis316mh" path="res://scenes/colored_container.tscn" id="1_yubou"]
[ext_resource type="PackedScene" uid="uid://bmqb4ae43griq" path="res://scenes/dice.tscn" id="3_u001w"]

[node name="game_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rns2u")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="game_container" parent="HBoxContainer/VBoxContainer" instance=ExtResource("1_yubou")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color_role = 3

[node name="center_dice_point" type="Node2D" parent="HBoxContainer/VBoxContainer/game_container"]

[node name="old_dices_container" type="Node2D" parent="HBoxContainer/VBoxContainer/game_container"]

[node name="colored_container3" parent="HBoxContainer/VBoxContainer" instance=ExtResource("1_yubou")]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.02
color_role = 2

[node name="dice_container" parent="HBoxContainer/VBoxContainer" instance=ExtResource("1_yubou")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="point" type="Node2D" parent="HBoxContainer/VBoxContainer/dice_container"]

[node name="dice" parent="HBoxContainer/VBoxContainer/dice_container/point" instance=ExtResource("3_u001w")]
position = Vector2(100, 0)

[node name="dice2" parent="HBoxContainer/VBoxContainer/dice_container/point" instance=ExtResource("3_u001w")]
position = Vector2(100, 0)

[node name="dice3" parent="HBoxContainer/VBoxContainer/dice_container/point" instance=ExtResource("3_u001w")]
position = Vector2(100, 0)

[node name="dice4" parent="HBoxContainer/VBoxContainer/dice_container/point" instance=ExtResource("3_u001w")]
position = Vector2(100, 0)

[node name="dice5" parent="HBoxContainer/VBoxContainer/dice_container/point" instance=ExtResource("3_u001w")]
position = Vector2(100, 0)

[node name="colored_container2" parent="HBoxContainer" instance=ExtResource("1_yubou")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
color_role = 2
